# AmazonPriceAnalysis

./: README.md  data.json  main.py  pyproject.toml
src/: db.py  llm.py  oxylabs_client.py  services.py
