[project]
name = "oxylabs-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "streamlit>=1.36.0",
    "requests>=2.32.3",
    "tinydb>=4.8.0",
    "pydantic>=2.8.2",
    "langchain>=0.2.3",
    "langchain-openai>=0.1.10",
    "openai>=1.40.0",
    "tenacity>=8.2.3",
    "python-dotenv>=1.1.1",
]
